--- a/values.yaml
+++ b/values.yaml
@@ -186,7 +186,7 @@ postgresql:
   persistence:
     accessMode: ReadWriteOnce
     enabled: true
-    existingClaim: null
+    existingClaim: mission-control-postgresql
     mountPath: /var/lib/postgresql/data/pgdata
     size: 50Gi
     subPath: postgresql-db
